# momo

./: README.md  pyproject.toml
notebooks/: sphere.py
src/momo/: __init__.py  geometry.py  integrate.py  operator.py
